Removed STR processing