@@ -50,17 +50,11 @@
           <source>21</source>
           <target>21</target>
           <encoding>UTF-8</encoding>
-          <compilerArgs>
-            <compilerArg>--enable-preview</compilerArg>
-          </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <argLine>--enable-preview</argLine>
-        </configuration>
       </plugin>
     </plugins>
   </build>
